# sovereign-2.0

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  TASK_18_COMPLETION_REPORT.md  demo_memory_export.py  demo_memory_import.py  main.py  pyproject.toml  requirements.txt  run_sovereign.py  setup.py  setup_env.bat  test_context_window_demo.py  test_embedding_service_demo.py  test_execution_report.md  test_extensibility_demo.py  test_gui.py  test_memory_manager_demo.py  test_result_processor_demo.py  test_vector_search_demo.py
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  task_026.txt  task_027.txt  task_028.txt  tasks.json
docs/: API_REFERENCE.md  INTEGRATION_BLUEPRINT.md  SYSTEM_ARCHITECTURE.md  UAT_PLAN.md
examples/: demo_automated_performance_testing.py  demo_performance_dashboard.py  demo_performance_monitoring.py
src/: __init__.py
src/sovereign/: __init__.py  automated_performance_testing.py  cli.py  config.py  consent_manager.py  context_window_manager.py  embedding_service.py  external_model_connector.py  gui.py  hardware.py  logger.py  memory_exporter.py  memory_importer.py  memory_leak_detector.py  memory_manager.py  memory_pruner.py  memory_schema.py  ollama_client.py  orchestrator.py  performance_monitor.py  privacy_manager.py  screen_context_integration.py  screen_context_manager.py  talker_model.py  thinker_model.py  tool_definition_schema.py  tool_discovery_engine.py  tool_execution_engine.py  tool_extensibility_manager.py  tool_integration_framework.py  tool_result_processor.py  vector_search_engine.py  voice_interface.py
src/sovereign/core/: __init__.py  app.py  service_manager.py
src/sovereign/services/: __init__.py  memory_service.py  model_service.py  screen_context_service.py  tool_service.py  voice_service.py
src/sovereign/tools/: core_tools.py  example_tools.py
tests/: __init__.py  integration_test_orchestrator.py  run_integration_tests.py  test_api_integration.py  test_automated_performance_testing.py  test_basic.py  test_comprehensive_integration.py  test_consent_manager.py  test_context_window_manager.py  test_core_app.py  test_core_tools.py  test_embedding_service.py  test_environment_config.py  test_environment_setup.py  test_environment_validator.py  test_error_handling_integration.py  test_external_model_connector.py  test_external_model_connector_enhanced.py  test_integration.py  test_main_entry.py  test_memory_exporter.py  test_memory_importer.py  test_memory_leak_detector.py  test_memory_manager.py  test_memory_pruner.py  test_memory_schema.py  test_memory_service.py  test_model_service.py  test_ocr_functionality.py  test_orchestrator.py  test_performance_gui_integration.py  test_performance_monitor.py  test_privacy_integration.py  test_privacy_manager.py  test_rag_system_integration.py  test_screen_context_integration.py  test_screen_context_manager.py  test_screen_context_service.py  test_secure_storage_system.py  test_service_manager.py  (+12 more)
